fixed content leak on small screens

--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -3,6 +3,7 @@
   object-fit: contain;
   height: 448px;
 }
+
 .banner__contents {
   margin-left: 30px;
   padding-top: 140px;
@@ -12,14 +13,17 @@
   font-size: 3rem;
   font-weight: 800;
   padding-bottom: 0.3rem;
+  text-shadow: 2px 2px 4px #000000;
 }
 .banner__description {
-  width: 45rem;
   line-height: 1.3;
   padding-top: 1rem;
   font-size: 0.8rem;
   max-width: 360px;
   height: 80px;
+  text-align: justify;
+  margin-right: auto;
+  text-shadow: 2px 2px 4px #000000;
 }
 .banner__button {
   cursor: pointer;
@@ -45,4 +49,10 @@
     rgba(37, 37, 37, 0.67),
     #111111
   );
+}
+
+@media (max-width: 430px) {
+  .banner__description {
+    margin-right: 20px;
+  }
 }
