--- a/src/components/row/row.css
+++ b/src/components/row/row.css
@@ -1,6 +1,8 @@
 .row {
-  margin-left: 10px;
   color: aliceblue;
+}
+.row > h2 {
+  margin-left: 10px;
 }
 .row_posters {
   display: flex;
